# PODA

./: Cargo.toml  justfile
.github/workflows/: ci.yml
ansible/: .gitignore  .yamlfmt  README.md  bigip.yml  configure.yml  deploy.yml  failover.yml  migrate.yml  openstack.yaml  provision.yml  readme.md  rejoin.yml  requirements.txt  switchover.yml  teardown.yml
ansible/group_vars/servers/: main.yml
ansible/host_vars/: lard-a.yml  lard-b.yaml
api/src/: timeseries.rs
db/: create_indices.sql  drop_indices.sql  flags.sql  labels.sql  partitions_generated.sql  public.sql
ingestion/: Cargo.toml
ingestion/src/: kldata.rs  kvkafka.rs  lib.rs  main.rs  permissions.rs  qc_pipelines.rs
integration_tests/: Cargo.toml  README.md
integration_tests/mock_qc_pipelines/fresh/: TA_PT1H.toml
integration_tests/src/: main.rs
integration_tests/tests/: end_to_end.rs
migrations/: .gitignore  README.md  date_diff.py  go.mod  go.sum  kdvh_test.go  kvalobs_test.go  main.go
migrations/index/: main.go
migrations/kdvh/: cache.go  dump.go  dump_functions.go  import.go  import_functions.go  import_test.go  kdvh_test.go  lard.go  list_tables.go  main.go  table.go
migrations/kdvh/db/: convert_functions.go  dump_functions.go  flag_test.go  flags.go  main.go  table.go
migrations/kdvh/dump/: dump.go  dump_functions.go  main.go  table.go  write.go
migrations/kdvh/import/: cache.go  convert_functions.go  flag_test.go  flags.go  import.go  import_test.go  main.go  table.go
migrations/kdvh/list/: main.go
migrations/kvalobs/: config_test.go  dump.go  import.go  kvalobs_test.go  main.go  utils.go
migrations/kvalobs/check/: main.go
migrations/kvalobs/db/: base_config.go  config_test.go  csv.go  csv_parsers.go  import_functions.go  label.go  label_dump_functions.go  labels.go  main.go  series_dump_functions.go  table.go
migrations/lard/: import.go  indices.go  main.go  permissions.go  timeseries.go
migrations/stinfosys/: elem_map.go  main.go  non_scalars.go  permissions.go  timeseries.go
migrations/tests/: kdvh_test.go  kvalobs_test.go
migrations/utils/: email.go  indices.go  time.go  timestamp.go  utils.go
qc_pipelines/fresh/: TA_PT1H.toml
rove_connector/: Cargo.toml
rove_connector/src/: lib.rs
util/: Cargo.toml
(+88 files in other folders)
