[workspace]
members = [
  "fake_data_generator",
  "api",
  "ingestion",
  "integration_tests",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
axum = "0.7.9"
bb8 = "0.8.6"
bb8-postgres = "0.8.1"
bytes = "1.9.0"
chrono = { version = "0.4.31", features = ["serde"] }
csv = "1.3.1"
futures = "0.3.28"
kafka = "0.10.0"
postgres-types = { version = "0.2.8", features = ["derive", "with-chrono-0_4"] }
quick-xml = { version = "0.35.0", features = [ "serialize", "overlapped-lists" ] }
rand = "0.8.5"
rand_distr = "0.4.3"
regex = "1.11.1"
serde = { version = "1.0.215", features = ["derive"] }
thiserror = "1.0.69"
tokio = { version = "1.41.1", features = ["rt-multi-thread", "macros"] }
tokio-postgres = { version = "0.7.12", features = ["with-chrono-0_4"] }
test-case = "3.3.1"
