[workspace]
members = [
  "fake_data_generator",
  "api",
  "ingestion",
  "integration_tests",
  "rove_connector",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
async-trait = "0.1.83"
axum = "0.7.9"
bb8 = "0.8.6"
bb8-postgres = "0.8.1"
bytes = "1.9.0"
chrono = { version = "0.4.39", features = ["serde"] }
chronoutil = "0.2.7"
csv = "1.3.1"
futures = "0.3.28"
kafka = "0.10.0"
postgres-types = { version = "0.2.8", features = ["derive", "with-chrono-0_4"] }
quick-xml = { version = "0.35.0", features = [ "serialize", "overlapped-lists" ] }
rand = "0.8.5"
rand_distr = "0.4.3"
regex = "1.11.1"
rove = { git = "https://github.com/metno/rove.git", branch = "lard_fixes" }
# rove = { git = "https://github.com/metno/rove.git" }
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "1.0.69"
tokio = { version = "1.41.1", features = ["rt-multi-thread", "macros"] }
tokio-postgres = { version = "0.7.12", features = ["with-chrono-0_4"] }
