[package]
name = "rove_connector"
version = "0.1.0"
edition.workspace = true

[dependencies]
async-trait.workspace = true
bb8.workspace = true
bb8-postgres.workspace = true
chrono.workspace = true
chronoutil.workspace = true
postgres-types.workspace = true
rove.workspace = true
thiserror.workspace = true
tokio-postgres.workspace = true

